--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"homepage": "http://www.cmsgears.org",
 	"type": "package",
 	"keywords": [ "yii2", "cmsgears", "plugin", "social meta" ],
-	"license": "GPLv3",
+	"license": "GPL-3.0-or-later",
 	"support": {
 		"resources": "https://www.cmsgears.org"
 	},
@@ -14,7 +14,7 @@
 		}
 	},
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.0.0",
         "cmsgears/module-core": "*"
     }
 }
